@@ -1,5 +1,8 @@
 Release Notes
 
+* 5/8/2017
+  * added nSimEvents
+
 * 5/4/2017
   * fixed AtlasAJB for AtnalysisBase
   * fixed getAvailableFiles
